force-app/main/default/objects/AI_Message__c/AI_Message__c.object-meta.xml
<CustomObject>
    <label>AI Message</label>
    <nameField>
        <displayFormat>MSG-{00000}</displayFormat>
        <label>AI Messages</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>