force-app/main/default/objects/AI_Message__c/fields/Conversation__c.field-meta.xml
<CustomField>
    <fullName>Conversation__c</fullName>
    <label>Conversation</label>
    <referenceTo>AI_Conversation__c</referenceTo>
    <relationshipLabel>AI Messages</relationshipLabel>
    <relationshipName>Messages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>