force-app/main/default/objects/AI_Message__c/fields/Feedback_Text__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Text__c</fullName>
    <label>Feedback Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>