force-app/main/default/objects/AI_Message__c/fields/Tokens_Used__c.field-meta.xml
<CustomField>
    <fullName>Tokens_Used__c</fullName>
    <label>Tokens Used</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>