force-app/main/default/objects/AI_Message__c/fields/User_Rating__c.field-meta.xml
<CustomField>
    <fullName>User_Rating__c</fullName>
    <label>User Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>👍 Helpful</fullName>
            </value>
            <value>
                <fullName>👎 Not Helpful</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>